--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
            <div class="icons">
            <a href="mailto:kitchenalchemy1@gmail.com"><i class="fa fa-at"></a></i>
             <a href="https://www.facebook.com/profile.php?id=61553827087745" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/KitchenAlchemy1" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://twitter.com/KitchenAlchemy1" target="_blank"><i class="fa-brands fa-x-twitter" style="color: #e08983;"></i></a>
             <a href="https://www.tiktok.com/@kitchen_alchemy1" target="_blank"></a><i class="fab fa-tiktok"></i></a>
             <a href="https://www.linkedin.com/in/kitchen-alchemy-ab7a852a1/" target="_blank"><i class="fa fa-linkedin"></i></a>
            </div>
